Security & Access Rights Auditor/main/default/objects/Object_Log__c/Object_Log__c.object-meta.xml
<CustomObject>
    <label>Object Log</label>
    <nameField>
        <label>Object Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>