Security & Access Rights Auditor/main/default/objects/Object_Log__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>Log-{00000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>