Security & Access Rights Auditor/main/default/objects/Object_Log__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>