Security & Access Rights Auditor/main/default/objects/Object_Log__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>